Migrado para java 21, e refatorações gerais de performance